# aiogram3-bot-template

./: .env  .env.example  .gitignore  README.md  alembic.ini  config.py  db.db  main.py  messages.py  pyproject.toml  requirements.txt
app/: config.py  create_tables.py  main.py  messages.py
app/alembic/: env.py
app/db/: __init__.py  create_tables.py  engine.py  models.py
app/db/funcs/: __init__.py  bannes_users.py  channels.py  chats.py  users.py
app/filters/: IsAdmin.py  __init__.py
app/handlers/: README.md  __init__.py
app/handlers/admins/: admin_panel.py
app/handlers/events/: __init__.py  on_error.py
app/handlers/users/: __init__.py  start_help.py
app/keyboards/: inline.py
app/middlewares/: CheckSub.py  README.md
app/utils/: jinja_texts.py  misc.py  tglogger.py
db/: create_tables.py  db.py  models.py
filters/: Filter.py  __init__.py
handlers/users/: __init__.py  start_help.py
middlewares/: GetUserInHandler.py  IgnoreBannedUsers.py  __init__.py  example_middleware.py
